--- a/auth.html
+++ b/auth.html
@@ -6,14 +6,112 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <style>
-        body { background: #181818; color: #fff; display: flex; align-items: center; justify-content: center; height: 100vh; }
-        .auth-box { background: #232323; border-radius: 10px; box-shadow: 0 8px 32px #0008; padding: 36px 28px; min-width: 320px; max-width: 95vw; }
-        .auth-box h2 { margin-bottom: 18px; }
-        .auth-box form { display: flex; flex-direction: column; gap: 12px; }
-        .auth-box input { padding: 10px; border-radius: 5px; border: 1px solid #444; background: #181818; color: #fff; }
-        .auth-box button { padding: 12px; background: #E58320; color: #fff; border: none; border-radius: 5px; font-weight: 600; cursor: pointer; }
-        .auth-box .switch-link { color: #E58320; cursor: pointer; text-decoration: underline; }
-        .auth-box .feedback { color: #f55; min-height: 18px; font-size: 13px; }
+        body {
+            min-height: 100vh;
+            margin: 0;
+            padding: 0;
+            /* Градиентный анимированный фон с фиолетовыми оттенками */
+            background: linear-gradient(120deg, #181818 0%, #232323 40%, #8f5cff 100%);
+            background-size: 200% 200%;
+            animation: gradientMove 8s ease-in-out infinite;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        @keyframes gradientMove {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+        .auth-box {
+            background: rgba(35,35,35,0.92);
+            border-radius: 18px;
+            box-shadow: 0 8px 32px 0 #000a, 0 1.5px 8px #8f5cff80;
+            padding: 40px 32px;
+            min-width: 340px;
+            max-width: 95vw;
+            backdrop-filter: blur(6px);
+            border: 1.5px solid #8f5cff40;
+            transition: box-shadow 0.3s;
+        }
+        .auth-box:hover {
+            box-shadow: 0 12px 40px 0 #000c, 0 2px 12px #b39cffb0;
+        }
+        .auth-box h2 {
+            margin-bottom: 22px;
+            font-weight: 700;
+            letter-spacing: 1px;
+            text-align: center;
+            background: linear-gradient(90deg, #8f5cff 30%, #fff 70%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+        .auth-box form {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+        }
+        .auth-box input {
+            padding: 12px;
+            border-radius: 7px;
+            border: 1.5px solid #444;
+            background: rgba(24,24,24,0.92);
+            color: #fff;
+            font-size: 16px;
+            transition: border 0.2s, box-shadow 0.2s;
+            outline: none;
+        }
+        .auth-box input:focus {
+            border: 1.5px solid #8f5cff;
+            box-shadow: 0 0 0 2px #8f5cff40;
+        }
+        .auth-box button {
+            padding: 13px;
+            background: linear-gradient(90deg, #8f5cff 60%, #b39cff 100%);
+            color: #fff;
+            border: none;
+            border-radius: 7px;
+            font-weight: 700;
+            font-size: 16px;
+            cursor: pointer;
+            box-shadow: 0 2px 8px #8f5cff40;
+            transition: background 0.3s, box-shadow 0.2s;
+        }
+        .auth-box button:hover {
+            background: linear-gradient(90deg, #b39cff 0%, #8f5cff 100%);
+            box-shadow: 0 4px 16px #8f5cff80;
+        }
+        .auth-box .switch-link {
+            color: #8f5cff;
+            cursor: pointer;
+            text-decoration: underline;
+            font-weight: 500;
+            transition: color 0.2s;
+        }
+        .auth-box .switch-link:hover {
+            color: #b39cff;
+        }
+        .auth-box .feedback {
+            color: #f55;
+            min-height: 18px;
+            font-size: 13px;
+            margin-top: 2px;
+            text-align: center;
+        }
+        /* Анимация появления формы */
+        .auth-box {
+            opacity: 0;
+            transform: translateY(30px) scale(0.98);
+            animation: fadeInUp 0.8s cubic-bezier(.23,1.01,.32,1) 0.2s forwards;
+        }
+        @keyframes fadeInUp {
+            to {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
+        }
     </style>
 </head>
 <body>
