--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reflex AI</title>
+    
+    <meta name="theme-color" content="#121212"/>
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="https://via.placeholder.com/192.png/121212/FFFFFF?text=R">
     <link rel="icon" href="https://cdn.glitch.global/209e13d7-5228-4d40-9601-0a225164a2fe/reflex.svg?v=1746970198201" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <!-- Highlight.js dark theme (atom-one-dark) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
-    <!-- Highlight.js core JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 </head>
 <body class="dark-theme">
@@ -78,20 +80,18 @@
                     <button class="btn-icon" aria-label="Еще"><i class="fas fa-ellipsis-h"></i></button>
                 </div>
                 <ul class="chats-list">
-                    <!-- Чаты будут динамически добавляться через JS -->
-                </ul>
+                    </ul>
             </div>
 
             <div class="sidebar-footer">
                 <div class="user-profile">
                     <img src="https://placehold.co/40x40/7B447C/FFFFFF?text=A" alt="Аватар пользователя" class="user-avatar">
                     <div class="user-info">
-                        <span class="user-name">Алиса Пользователь</span>
-                        <span class="user-points">111 Очков</span>
+                        <span class="user-name">Загрузка...</span>
+                        <span class="user-points">0 Очков</span>
                     </div>
                     <button class="btn-icon btn-logout" title="Выйти" style="display:none;"><i class="fas fa-sign-out-alt"></i></button>
-                    <!-- Кнопка выхода будет показана через JS -->
-                </div>
+                    </div>
             </div>
             <div id="profileMenuDropdown" class="profile-menu-dropdown"></div>
         </aside>
@@ -109,7 +109,6 @@
                                 <span class="gradient-pro-title">Reflex AI Pro</span> <i class="fas fa-chevron-down"></i>
                             </button>
                         </div>
-                        <!-- Мини-монитор температуры и батареи -->
                         <div class="mini-monitor">
                             <div class="mini-indicator" id="miniTempIndicator">
                                 <span class="mini-icon" id="miniTempIcon"></span>
@@ -126,8 +125,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- /Мини-монитор -->
-                    </div>
+                        </div>
                     <div class="header-right">
                         <button class="btn btn-header btn-new-chat-header" aria-label="Новый чат">
                             <i class="fas fa-comment-dots"></i><span class="btn-text-desktop">New chat</span>
@@ -145,7 +143,6 @@
                 <div class="chat-area">
                     <div class="chat-messages" id="chatMessages">
                     </div>
-                    <!-- Контейнер для анимации загрузки ИИ (будет показан через JS) -->
                     <div id="aiTypingIndicator" class="ai-typing-indicator" style="display: none;">
                         <img src="https://cdn.glitch.global/209e13d7-5228-4d40-9601-0a225164a2fe/reflex.svg?v=1746970198201" alt="Reflex AI" class="ai-typing-avatar">
                         <span class="ai-typing-dots">
@@ -161,7 +158,6 @@
                                 <i class="fas fa-paperclip"></i>
                             </button>
                             <textarea id="messageInput" placeholder="Задайте вопрос конфиденциально..."></textarea>
-                            <!-- Добавляем меню команд здесь -->
                             <div id="commandSuggestions" class="command-suggestions" style="display: none;">
                                 <div class="command-header">Доступные команды:</div>
                                 <div class="commands-list">
@@ -188,7 +184,6 @@
                                 </div>
                             </div>
                             <button class="btn-icon btn-voice-input" id="voiceInputBtn" aria-label="Голосовой ввод">
-                                <!-- Заменено: <i class="fas fa-microphone-lines"></i> -->
                                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-md">
                                     <path d="M5.66699 14.4165V3.5835C5.66699 2.89314 6.22664 2.3335 6.91699 2.3335C7.6072 2.33367 8.16699 2.89325 8.16699 3.5835V14.4165C8.16699 15.1068 7.6072 15.6663 6.91699 15.6665C6.22664 15.6665 5.66699 15.1069 5.66699 14.4165ZM9.83301 11.9165V6.0835C9.83301 5.39325 10.3928 4.83367 11.083 4.8335C11.7734 4.8335 12.333 5.39314 12.333 6.0835V11.9165C12.333 12.6069 11.7734 13.1665 11.083 13.1665C10.3928 13.1663 9.83301 12.6068 9.83301 11.9165ZM1.5 10.2505V7.75049C1.5 7.06013 2.05964 6.50049 2.75 6.50049C3.44036 6.50049 4 7.06013 4 7.75049V10.2505C3.99982 10.9407 3.44025 11.5005 2.75 11.5005C2.05975 11.5005 1.50018 10.9407 1.5 10.2505ZM14 10.2505V7.75049C14 7.06013 14.5596 6.50049 15.25 6.50049C15.9404 6.50049 16.5 7.06013 16.5 7.75049V10.2505C16.4998 10.9407 15.9402 11.5005 15.25 11.5005C14.5598 11.5005 14.0002 10.9407 14 10.2505Z" fill="currentColor"></path>
                                 </svg>
@@ -375,5 +370,17 @@
     </div>
 
     <script src="index.js"></script>
-</body>
+
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/sw.js').then(registration => {
+                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                }, err => {
+                    console.log('ServiceWorker registration failed: ', err);
+                });
+            });
+        }
+    </script>
+    </body>
 </html>
