--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#121212"/>
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="https://via.placeholder.com/192.png/121212/FFFFFF?text=R">
-    <link rel="icon" href="https://cdn.glitch.global/209e13d7-5228-4d40-9601-0a225164a2fe/reflex.svg?v=1746970198201" type="image/svg+xml">
+    <link rel="icon" href="reflex.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 <body class="dark-theme">
     <div id="loadingScreen" class="loading-screen">
         <div class="loading-logo">
-            <img src="https://cdn.glitch.global/209e13d7-5228-4d40-9601-0a225164a2fe/reflex.svg?v=1746970198201" alt="Логотип Reflex AI" width="80" height="80">
+            <img src="reflex.svg" alt="Логотип Reflex AI" width="80" height="80">
         </div>
     </div>
 
@@ -144,7 +144,7 @@
                     <div class="chat-messages" id="chatMessages">
                     </div>
                     <div id="aiTypingIndicator" class="ai-typing-indicator" style="display: none;">
-                        <img src="https://cdn.glitch.global/209e13d7-5228-4d40-9601-0a225164a2fe/reflex.svg?v=1746970198201" alt="Reflex AI" class="ai-typing-avatar">
+                        <img src="reflex.svg" alt="Reflex AI" class="ai-typing-avatar">
                         <span class="ai-typing-dots">
                             <span></span><span></span><span></span>
                         </span>
